# fuse-for-macosx

./: .gitattributes  .gitignore  .gitmodules  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  README  README.Wii  Readme.md  THANKS  TODO  aalibkeyboard.c  aalibui.h  aaui.c  acconfig.h  acinclude.m4  alleg.h  autogen.sh  ay.c  ay.h  bitmap.h  build_win32.sh  compat.h  config.h.top  configure.ac  configure.in  dck.c  dck.h  display.c  display.h  divide.c  divide.h  dxsound.c  dxsound.h  event.c  event.h  fbdisplay.c  fbkeyboard.c  (+170 more)
.beads/: issues.jsonl
compat/: Makefile.am  dirname.c  getopt.c  getopt1.c  mkstemp.c
compat/amiga/: Makefile.am  osname.c  paths.c
compat/linux/: Makefile.am  paths.c  relative_paths.c
compat/morphos/: .gitignore  Makefile.am  osname.c
compat/unix/: .gitignore  Makefile.am  dir.c  file.c  osname.c  paths.c  relative_paths.c  socket.c  timer.c  tuntap.c
compat/wii/: Makefile.am  dir.c  file.c  osname.c  paths.c  timer.c
compat/win32/: .gitignore  Makefile.am  distribution.mk  osname.c  paths.c  socket.c  timer.c
data/: .gitignore  Makefile.am  fuse.desktop.in  fuse.xml.in  net.sourceforge.fuse_emulator.Fuse.desktop.in  (+1 more)
debugger/: .gitignore  arch.h  (+26 more)
disk/: Makefile.am  beta.c  beta.h  crc.c  disk.c  disk.h  fdd.c  fdd.h  opus.c  opus.h  plusd.c  plusd.h  upd_fdc.c  upd_fdc.h  wd1770.c  wd1770.h  wd_fdc.c  wd_fdc.h
lib/: .gitignore  Makefile.am  disk_plus3.z80  tape_128.szx  tape_128.z80  tape_16.z80  tape_2048.szx  tape_2048.z80  tape_2068.z80  tape_48.z80  tape_pentagon.szx  tape_pentagon.z80  tape_plus2.szx  tape_plus2.z80  tape_plus2a.z80  tape_plus3.z80  tape_scorpion.szx  tape_scorpion.z80
lib/compressed/: disk_plus3.szx  tape_128.szx  tape_16.szx  tape_2048.szx  tape_2068.szx  tape_48.szx  tape_48_ntsc.szx  tape_pentagon.szx  tape_plus2.szx  tape_plus2a.szx  tape_plus3.szx  tape_plus3e.szx  tape_scorpion.szx  tape_se.szx  tape_ts2068.szx
lib/uncompressed/: disk_plus3.szx  tape_128.szx  tape_16.szx  tape_2048.szx  tape_2068.szx  tape_48.szx  tape_48_ntsc.szx  tape_pentagon.szx  tape_plus2.szx  tape_plus2a.szx  tape_plus3.szx  tape_plus3e.szx  tape_scorpion.szx  tape_se.szx  tape_ts2068.szx
machines/: Makefile.am  machines.h  machines_periph.c  machines_periph.h  pentagon.c  pentagon.h  pentagon1024.c  pentagon512.c  scorpion.c  scorpion.h  spec128.c  spec128.h  spec16.c  spec16.h  spec48.c  spec48.h  spec48_ntsc.c  spec_se.c  specplus2.c  specplus2a.c  specplus3.c  specplus3.h  specplus3e.c  tc2048.c  tc2048.h  tc2068.c  tc2068.h  ts2068.c
sound/: Makefile.am  alsasound.c  aosound.c  blipbuffer.c  blipbuffer.h  coreaudiosound.c  dxsound.c  hpsound.c  lowlevel.h  nullsound.c  osssound.c  pulsesound.c  sdl2sound.c  sdlsound.c  sfifo.c  sunsound.c  wiisound.c  win32sound.c
timer/: .gitignore  Makefile.am  native.c  sdl.c  timer.c  timer.h  unix.c  win32.c
ui/fb/: .gitignore  Makefile.am  error.c  fbdisplay.c  fbdisplay.h  fbjoystick.c  fbkeyboard.c  fbkeyboard.h  fbmouse.c  fbmouse.h  fbui.c
ui/gtk/: .gitignore  Makefile.am  binary.c  browse.c  confirm.c  debugger.c  error.c  fileselector.c  gtkcompat.c  gtkcompat.h  gtkdisplay.c  gtkdisplay.h  gtkinternals.h  gtkjoystick.c  gtkkeyboard.c  gtkkeyboard.h  gtkmouse.c  gtkui.c  gtkui.h  memory.c  memory_gtk2.c  options-header.pl  options.pl  picture.c  pixmaps.c  pokefinder.c  pokemem.c  rollback.c  roms.c  statusbar.c  stock.c
ui/gtk3/: Makefile.am  binary.c  browse.c  confirm.c  debugger.c  fileselector.c  gtkdisplay.c  gtkinternals.h  gtkjoystick.c  gtkkeyboard.c  gtkui.c  options.pl  pokefinder.c  pokemem.c  resources.xml  rollback.c  roms.c  statusbar.c
ui/scaler/: Makefile.am  scaler.c  scaler.h  scaler_hq2x.c  scaler_hq3x.c  scaler_internals.h  scalers.c
ui/sdl2/: Makefile.am  sdl2_display.c  sdl2_display.h  sdl2_display_internal.c  sdl2_display_internal.h  sdl2_joystick.c  sdl2_joystick.h  sdl2_joystick_internal.c  sdl2_joystick_internal.h  sdl2_keyboard.c  sdl2_keyboard.h  sdl2_mouse_internal.c  sdl2_mouse_internal.h  sdl2_ui.c
ui/svga/: .gitignore  Makefile.am  error.c  svgadisplay.c  svgadisplay.h  svgajoystick.c  svgakeyboard.c  svgakeyboard.h  svgaui.c
ui/wii/: .gitignore  Makefile.am  wiidisplay.c  wiidisplay.h  wiijoystick.c  wiijoystick.h  wiikeyboard.c  wiikeyboard.h  wiikeysyms.h  wiimouse.c  wiimouse.h  wiiui.c
ui/win32/: .gitignore  Makefile.am  about.c  about.h  about.rc  binary.c  binary.h  binary.rc  browse.c  browse.h  browse.rc  confirm.c  debugger.c  debugger.h  debugger.rc  debuglog.c  debuglog.h  del_o.bat  error.c  fileselector.c  hyperlinks.c  hyperlinks.h  keysyms.c  machine_select.h  machine_select.rc  memorybrowser.c  memorybrowser.h  memorybrowser.rc  menu_data.c  menu_data.h  menu_data.rc  options-header.pl  options-resource.pl  options.pl  picture.c  picture.h  picture.rc  pokefinder.c  pokefinder.h  pokefinder.rc  (+25 more)
ui/win32/icons/: Makefile.am
ui/win32/installer/: .gitignore  Makefile.am  fuse.nsi  fuse.nsi.in
unittests/: .gitignore  Makefile.am  displaytest.c  sdl2displaytest.c  sdl2joysticktest.c  sdl2mousetest.c  unittests.c  unittests.h
widget/: .gitignore  Makefile.am  browse.c  debugger.c  error.c  file.c  filesel.c  fuse.font.sbf  general.c  help.c  joystick.c  machine_widget.c  mainmenu.c  memory.c  menu.c  menu_data.c  mkfusefont.pl  options-header.pl  options.c  options.pl  picture.c  picture_data.tap  pokefinder.c  query.c  roms.c  scaler.c  select.c  snapshot_widget.c  tap-extract.pl  tape_widget.c  text.c  widget.c  widget.h  widget_internals.h
z80/: .gitignore  Makefile.am  coretest.c  harness.pl  z80.c  z80.h  z80.pl  z80_cb.c  z80_checks.h  z80_ddfd.c  z80_ddfdcb.c  z80_debugger_variables.c  z80_ed.c  z80_internals.h  z80_macros.h  z80_ops.c
z80/tests/: 00.in  01.in  02.out  03.out  09.out  0b.out  10.out  13.out  19.out  1b.out  23.out  27_1.in  27_1.out  29.out  2b.out  33.out  34.out  35.out  37.in  37.out  39.out  3b.out  76.out  Makefile.am  README  c0_1.out  c0_2.out  c5.out  c7.out  c8_1.out  c8_2.out  cb06.out  cb0e.out  cb16.out  cb1e.out  cb26.out  cb2e.out  cb36.out  cb3e.out  cb40.out  (+735 more)
(+522 files in other folders)
